--- a/root.tex
+++ b/root.tex
@@ -1,32 +1,6 @@
-%% Modified documentstyle to documentclass -- compatibility with LaTex2e
-%% N. Mancell (98/03/01).
-
-%%  ucalgthes_root.tex        (NM 98/03/01)
-%   Modified   92-09-18      Add references to dissertation        D. Teale
-%                            Add approval page to toc
-%                            Add ref to Title Degree on approval page
-%   Modified  2006-09-12     Added geometry package to set up UofC thesis margins
-%                            Removed includeprompt option N. Mancell
-%
-% Modified  2012-04-15  T.Zhang
-% 1, the ‘fancy’ package is cancelled. The pagestyle is changed from ‘myheadings’ and ‘headings’ to ‘plain’ to move the page number (footer) from top right to bottom centre.
-% 2, The parameter  of using ‘geometry’ package is changed from four different values (top=1in, bottom=1.22in, left=1.40in, right=0.850in) to one single value: 1in (top=1in, bottom= 1in, left= 1in, right= 1in)
-% 3, ‘List of Figures’ is modified to ‘List of Figures and Illustrations’
-% 4, A new page ‘List of Symbols, Abbreviations and Nomenclature’ is created. Its page number is following ‘List of Figures and Illustrations’ with Roman numerals. A separate file ‘symbols.tex’ is created for students to put content into the list.
-
-
-
-
-
 \documentclass[12pt]{ucalgthes1}
 \usepackage[pdftex]{graphicx}
 \usepackage[letterpaper,top=1in, bottom= 1in, left= 1in, right= 1in]{geometry}
-%\usepackage{fancyhdr}
-%\fancyhead{}
-%\fancyfoot{}
-%\renewcommand{\headrulewidth}{0pt}
-%\fancyhead[RO,LE]{\thepage}
-%Define other usepackages here
 \usepackage{hyperref}
 \usepackage{mathptmx}
 \usepackage{listings}
@@ -36,6 +10,10 @@
 \usepackage{mathtools}
 \usepgfplotslibrary{statistics}
 \usepackage{courier}
+\usepackage[square,numbers,sectionbib]{natbib}
+\usepackage[sectionbib]{chapterbib}
+\usepackage[numbib]{tocbibind}
+\newcommand{\newblock}{}
 \title{Title of Thesis (title case, double spaced, no more than 240 characters. No bold font or symbols, except Greek) \\ \bigskip
 Thesis Title Second Line }
 %
