--- a/controlled_study/controlled_study.tex
+++ b/controlled_study/controlled_study.tex
@@ -500,6 +500,6 @@ In this paper, we presented a set of problems that experienced REST API client d
 We are grateful to our participants for their valuable time on this study. We thank our university for funding this research.
 
 \bibliographystyle{IEEEtran}
-\bibliography{controlled_study/IEEEabrv,controlled_study/refs}
+\bibliography{IEEEabrv,controlled_study/refs}
 
 
